--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "author": "16439s",
   "license": "MIT",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^20.11.24",
+    "@types/uuid": "^9.0.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
-    "express": "^4.18.3"
+    "axios": "^1.6.7",
+    "express": "^4.18.3",
+    "uuid": "^9.0.1"
   }
 }
