--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "axios": "^1.6.7",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.3",
     "uuid": "^9.0.1"
   }
