--- a/package.json
+++ b/package.json
@@ -12,17 +12,28 @@
   "license": "MIT",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/koa-cookie": "^1.0.3",
     "@types/node": "^20.11.24",
     "@types/uuid": "^9.0.8",
+    "add": "^2.0.6",
+    "pnpm": "^8.15.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/koa": "^2.15.0",
+    "@types/koa-router": "^7.4.8",
+    "@types/koa-static": "^4.0.4",
     "axios": "^1.6.7",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.3",
+    "koa": "^2.15.0",
+    "koa-body": "^6.0.1",
+    "koa-cookie": "^1.0.0",
+    "koa-router": "^12.0.1",
+    "koa-static": "^5.0.0",
     "uuid": "^9.0.1"
   }
 }
