--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "koa-cookie": "^1.0.0",
     "koa-router": "^12.0.1",
     "koa-static": "^5.0.0",
+    "sharp": "^0.33.2",
     "uuid": "^9.0.1"
   }
 }
